# minijazz

./: .gitignore  Makefile  README.md  dune-project  log.txt
ASTs/: ast.ml  commonAST.ml  dune  netlistConstrainedAST.ml  netlistDimensionedAST.ml  netlistSizedAST.ml  parserAST.ml  staticScopedAST.ml  staticTypedAST.ml  staticTypedPartialAST.ml  typedAst.ml
analysis/: automaton.ml  callgraph.ml  constraints_solver.ml  dedimension.ml  dune  matcher.ml  netlist_constrain.ml  netlist_dimensioning.ml  netlist_sizer.ml  normalize.ml  pretyper.ml  reductions.ml  rename_local.ml  reset.ml  scoping.ml  simplify.ml  sized_to_old.ml  sizer_to_parser.ml  static_constrain.ml  static_scoping.ml  static_typer.ml  typer.ml  typing.ml
doc/: mini-jazz-grammar.tex
global/: ast.ml  cli_options.ml  dune  errors.ml  ident.ml  location.ml  mapfold.ml  misc.ml  printer.ml  static.ml  static_utils.ml
main/: cli_options.ml  dune  mj2net.ml  mj_compiler.ml  mjc.ml
misc/: dune  uniqueId.ml  uniqueId.mli
netlist/: dune  netlist_ast.ml  netlist_lexer.mll  netlist_parser.mly  netlist_printer.ml  netlist_simplify.ml
original/: callgraph.ml  dune  mj2net.ml  normalize.ml  scoping.ml  simplify.ml  typing.ml
parser/: dune  lexer.mll  parser.mly  parser_old.mly
printers/: commonAst.ml  dune  netlistDimensionedAst.ml  netlistSizedAst.ml  parserAst.ml  staticTypedAst.ml  staticTypedPartialAst.ml
test/: automaton.mj  n_ops.mj  n_ops.net  nadder.mj  net_simplify.mj  net_simplify.net  static.mj  tests.mj
test/bad_inputs/: ex0.mj  ex1.mj  ex2.mj  ex3.mj  ex4.mj  ex5.mj  ex6.mj  ex7.mj
test/inputs/: 2state_automaton copy.mj  2state_automaton.mj  counter_automaton.mj  include.mj  include2.mj  local_automaton.mj  (+11 more)
test/parsing/: dune
